# KA24DE

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  tasklist
documentation/: KA24DE-logo.xcf
src/: KA24DE.cpp  KA24DE.h  KA24DE.hpp  main.cpp
src/ecs/: component.cpp  component.h  component.hpp  componentcontainer.hpp  componentmanager.hpp  dictator.hpp  entity.cpp  entity.h  entitymanager.cpp  entitymanager.h  entitymanager.hpp  entitytype.hpp  system.hpp  systemmanager.hpp
src/ecs/components/: collider2d.hpp  physicsbody.cpp  physicsbody.h  physicsbody.hpp  playerbody.hpp  script.hpp  sprite.cpp  sprite.h  sprite.hpp  spriterenderer.hpp  transform.cpp  transform.h  transform.hpp
src/ecs/systems/: collisionsystem.cpp  collisionsystem.hpp  physicssystem.cpp  physicssystem.hpp  playermove.cpp  playermove.hpp  scriptinglayer.hpp  spriterenderingsystem.cpp  spriterenderingsystem.hpp
src/input-manager/: input.cpp  input.hpp
src/user-scripts/: playercontroller.hpp  switchspritetest.cpp  switchspritetest.hpp
